[package]
name = "yatta"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "yatta"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
m3u8-rs = "5.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
gst = { package = "gstreamer", version = "0.22.2", features = ["v1_18"] }
gst-app = { package = "gstreamer-app", version = "0.22.0", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", version = "0.22.0", features = ["v1_18"] }
gst-audio = { package = "gstreamer-audio", version = "0.22.0", features = ["v1_18"] }
gst-video = { package = "gstreamer-video", version = "0.22.1", features = ["v1_18"] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.22.0", features = ["v1_20"] }
env_logger = "0.11.3"
tempfile = "3"
log = "0.4.20"
ctrlc = "3.2"
tokio = { version = "1.17", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["add-extension", "fs", "cors", "set-header"] }
once_cell = "1.19.0"
rand = "0.8"

[dev-dependencies]
gst-check = { package = "gstreamer-check", version = "0.22.0", features = ["v1_18"] }
dash-mpd = { version = "0.13", default-features = false }
quick-xml = { version = "0.30", features = ["serialize"] }
serde = "1"
